--- a/env.yml
+++ b/env.yml
@@ -3,251 +3,335 @@ channels:
   - acoular
   - conda-forge
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - acoular=25.03=py_0
-  - alsa-lib=1.2.13=hb9d3cd8_0
-  - anyio=4.8.0=pyhd8ed1ab_0
-  - argon2-cffi=23.1.0=pyhd8ed1ab_1
-  - argon2-cffi-bindings=21.2.0=py313h536fd9c_5
-  - arrow=1.3.0=pyhd8ed1ab_1
-  - asttokens=3.0.0=pyhd8ed1ab_1
-  - attrs=25.1.0=pyh71513ae_0
-  - beautifulsoup4=4.13.3=pyha770c72_0
-  - bleach=6.2.0=pyh29332c3_4
-  - bleach-with-css=6.2.0=h82add2a_4
-  - blosc=1.21.6=he440d0b_1
-  - brotli=1.1.0=hb9d3cd8_2
-  - brotli-bin=1.1.0=hb9d3cd8_2
-  - bzip2=1.0.8=h4bc722e_7
-  - c-ares=1.34.4=hb9d3cd8_0
-  - c-blosc2=2.17.0=h3122c55_0
-  - ca-certificates=2025.1.31=hbcca054_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - cairo=1.18.2=h3394656_1
-  - cffi=1.17.1=py313hfab6e84_0
-  - comm=0.2.2=pyhd8ed1ab_1
-  - contourpy=1.3.1=py313h33d0bda_0
-  - cycler=0.12.1=pyhd8ed1ab_1
-  - cyrus-sasl=2.1.27=h54b06d7_7
-  - dbus=1.13.6=h5008d03_3
-  - debugpy=1.8.13=py313h46c70d0_0
-  - decorator=5.2.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - double-conversion=3.3.1=h5888daf_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_1
-  - executing=2.1.0=pyhd8ed1ab_1
-  - expat=2.6.4=h5888daf_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=h77eed37_3
-  - fontconfig=2.15.0=h7e30c49_1
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fonttools=4.56.0=py313h8060acc_0
-  - fqdn=1.5.1=pyhd8ed1ab_1
-  - freetype=2.12.1=h267a509_2
-  - graphite2=1.3.13=h59595ed_1003
-  - harfbuzz=10.4.0=h76408a6_0
-  - hdf5=1.14.3=nompi_h2d575fe_109
-  - icu=75.1=he02047a_0
-  - idna=3.10=pyhd8ed1ab_1
-  - importlib-metadata=8.6.1=pyha770c72_0
-  - importlib_resources=6.5.2=pyhd8ed1ab_0
-  - ipykernel=6.29.5=pyh3099207_0
-  - ipython=9.0.0=pyhfb0248b_1
-  - ipython_genutils=0.2.0=pyhd8ed1ab_2
-  - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
-  - isoduration=20.11.0=pyhd8ed1ab_1
-  - jedi=0.19.2=pyhd8ed1ab_1
-  - jinja2=3.1.6=pyhd8ed1ab_0
-  - joblib=1.4.2=pyhd8ed1ab_1
-  - jsonpointer=3.0.0=py313h78bf25f_1
-  - jsonschema=4.23.0=pyhd8ed1ab_1
-  - jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
-  - jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_1
-  - jupyter_client=8.6.3=pyhd8ed1ab_1
-  - jupyter_core=5.7.2=pyh31011fe_1
-  - jupyter_events=0.12.0=pyh29332c3_0
-  - jupyter_server=2.15.0=pyhd8ed1ab_0
-  - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
-  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
-  - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.7=py313h33d0bda_0
-  - krb5=1.21.3=h659f571_0
-  - lcms2=2.17=h717163a_0
-  - ld_impl_linux-64=2.43=h712a8e2_4
-  - lerc=4.0.0=h27087fc_0
-  - libaec=1.1.3=h59595ed_0
-  - libblas=3.9.0=31_h59b9bed_openblas
-  - libbrotlicommon=1.1.0=hb9d3cd8_2
-  - libbrotlidec=1.1.0=hb9d3cd8_2
-  - libbrotlienc=1.1.0=hb9d3cd8_2
-  - libcblas=3.9.0=31_he106b2a_openblas
-  - libclang-cpp19.1=19.1.7=default_hb5137d0_1
-  - libclang13=19.1.7=default_h9c6a7e4_1
-  - libcups=2.3.3=h4637d8d_4
-  - libcurl=8.12.1=h332b0f4_0
-  - libdeflate=1.23=h4ddbbb0_0
-  - libdrm=2.4.124=hb9d3cd8_0
-  - libedit=3.1.20250104=pl5321h7949ede_0
-  - libegl=1.7.0=ha4b6fd6_2
-  - libev=4.33=hd590300_2
-  - libexpat=2.6.4=h5888daf_0
-  - libffi=3.4.6=h2dba641_0
-  - libgcc=14.2.0=h767d61c_2
-  - libgcc-ng=14.2.0=h69a702a_2
-  - libgfortran=14.2.0=h69a702a_2
-  - libgfortran5=14.2.0=hf1ad2bd_2
-  - libgl=1.7.0=ha4b6fd6_2
-  - libglib=2.82.2=h2ff4ddf_1
-  - libglvnd=1.7.0=ha4b6fd6_2
-  - libglx=1.7.0=ha4b6fd6_2
-  - libgomp=14.2.0=h767d61c_2
-  - libhwloc=2.11.2=default_h0d58e46_1001
-  - libiconv=1.18=h4ce23a2_1
-  - libjpeg-turbo=3.0.0=hd590300_1
-  - liblapack=3.9.0=31_h7ac8fdf_openblas
-  - libllvm15=15.0.7=ha7bfdaf_5
-  - libllvm19=19.1.7=ha7bfdaf_1
-  - liblzma=5.6.4=hb9d3cd8_0
-  - libmpdec=4.0.0=h4bc722e_0
-  - libnghttp2=1.64.0=h161d5f1_0
-  - libntlm=1.8=hb9d3cd8_0
-  - libopenblas=0.3.29=pthreads_h94d23a6_0
-  - libopengl=1.7.0=ha4b6fd6_2
-  - libpciaccess=0.18=hd590300_0
-  - libpng=1.6.47=h943b412_0
-  - libpq=17.4=h27ae623_0
-  - libsodium=1.0.20=h4ab18f5_0
-  - libsqlite=3.49.1=hee588c1_1
-  - libssh2=1.11.1=hf672d98_0
-  - libstdcxx=14.2.0=h8f9b012_2
-  - libstdcxx-ng=14.2.0=h4852527_2
-  - libtiff=4.7.0=hd9ff511_3
-  - libuuid=2.38.1=h0b41bf4_0
-  - libwebp-base=1.5.0=h851e524_0
-  - libxcb=1.17.0=h8a09558_0
-  - libxkbcommon=1.8.0=hc4a0caf_0
-  - libxml2=2.13.6=h8d12d68_0
-  - libxslt=1.1.39=h76b75d6_0
-  - libzlib=1.3.1=hb9d3cd8_2
-  - llvmlite=0.44.0=py313h1b76d92_0
-  - lz4-c=1.10.0=h5888daf_1
-  - markupsafe=3.0.2=py313h8060acc_1
-  - matplotlib=3.10.1=py313h78bf25f_0
-  - matplotlib-base=3.10.1=py313h129903b_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
-  - mistune=3.1.2=pyhd8ed1ab_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - mysql-common=9.0.1=h266115a_4
-  - mysql-libs=9.0.1=he0572af_4
-  - nbclassic=1.2.0=pyhd8ed1ab_0
-  - nbclient=0.10.2=pyhd8ed1ab_0
-  - nbconvert-core=7.16.6=pyh29332c3_0
-  - nbformat=5.10.4=pyhd8ed1ab_1
-  - ncurses=6.5=h2d0b736_3
-  - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - nomkl=1.0=h5ca1d4c_0
-  - notebook-shim=0.2.4=pyhd8ed1ab_1
-  - numba=0.61.0=py313h0b724e9_1
-  - numexpr=2.10.2=py313h5f97788_100
-  - numpy=2.1.3=py313h4bf6692_0
-  - openjpeg=2.5.3=h5fbd93e_0
-  - openldap=2.6.9=he970967_0
-  - openssl=3.4.1=h7b32b05_0
-  - overrides=7.7.0=pyhd8ed1ab_1
-  - packaging=24.2=pyhd8ed1ab_2
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - parso=0.8.4=pyhd8ed1ab_1
-  - pcre2=10.44=hba22ea6_2
-  - pexpect=4.9.0=pyhd8ed1ab_1
-  - pickleshare=0.7.5=pyhd8ed1ab_1004
-  - pillow=11.1.0=py313h8db990d_0
-  - pip=25.0.1=pyh145f28c_0
-  - pixman=0.44.2=h29eaf8c_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
-  - platformdirs=4.3.6=pyhd8ed1ab_1
-  - prometheus_client=0.21.1=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.50=pyha770c72_0
-  - psutil=7.0.0=py313h536fd9c_0
-  - pthread-stubs=0.4=hb9d3cd8_1002
-  - ptyprocess=0.7.0=pyhd8ed1ab_1
-  - pure_eval=0.2.3=pyhd8ed1ab_1
-  - py-cpuinfo=9.0.0=pyhd8ed1ab_1
-  - pycparser=2.22=pyh29332c3_1
-  - pygments=2.19.1=pyhd8ed1ab_0
-  - pyparsing=3.2.1=pyhd8ed1ab_0
-  - pyside6=6.8.2=py313h5f61773_1
-  - pytables=3.10.2=py313hd261420_2
-  - python=3.13.2=hf636f53_101_cp313
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
-  - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
-  - python-json-logger=2.0.7=pyhd8ed1ab_0
-  - python_abi=3.13=5_cp313
-  - pyyaml=6.0.2=py313h8060acc_2
-  - pyzmq=26.2.1=py313h8e95178_0
-  - qhull=2020.2=h434a139_5
-  - qt6-main=6.8.2=h588cce1_0
-  - readline=8.2=h8c095d6_2
-  - referencing=0.36.2=pyh29332c3_0
-  - rfc3339-validator=0.1.4=pyhd8ed1ab_1
-  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.23.1=py313h6071e0b_0
-  - scikit-learn=1.6.1=py313h8ef605b_0
-  - scipy=1.15.2=py313h86fcf2b_0
-  - send2trash=1.8.3=pyh0d859eb_1
-  - setuptools=75.8.2=pyhff2d567_0
-  - six=1.17.0=pyhd8ed1ab_0
-  - snappy=1.2.1=h8bd8927_1
-  - sniffio=1.3.1=pyhd8ed1ab_1
-  - soupsieve=2.5=pyhd8ed1ab_1
-  - stack_data=0.6.3=pyhd8ed1ab_1
-  - tbb=2022.0.0=hceb3a55_0
-  - terminado=0.18.1=pyh0d859eb_0
-  - threadpoolctl=3.5.0=pyhc1e730c_0
-  - tinycss2=1.4.0=pyhd8ed1ab_0
-  - tk=8.6.13=noxft_h4845f30_101
-  - tornado=6.4.2=py313h536fd9c_0
-  - traitlets=5.14.3=pyhd8ed1ab_1
-  - traits=7.0.2=py313h536fd9c_0
-  - types-python-dateutil=2.9.0.20241206=pyhd8ed1ab_0
-  - typing-extensions=4.12.2=hd8ed1ab_1
-  - typing_extensions=4.12.2=pyha770c72_1
-  - typing_utils=0.1.0=pyhd8ed1ab_1
-  - tzdata=2025a=h78e105d_0
-  - uri-template=1.3.0=pyhd8ed1ab_1
-  - wayland=1.23.1=h3e06ad9_0
-  - wcwidth=0.2.13=pyhd8ed1ab_1
-  - webcolors=24.11.1=pyhd8ed1ab_0
-  - webencodings=0.5.1=pyhd8ed1ab_3
-  - websocket-client=1.8.0=pyhd8ed1ab_1
-  - xcb-util=0.4.1=hb711507_2
-  - xcb-util-cursor=0.1.5=hb9d3cd8_0
-  - xcb-util-image=0.4.0=hb711507_2
-  - xcb-util-keysyms=0.4.1=hb711507_0
-  - xcb-util-renderutil=0.3.10=hb711507_0
-  - xcb-util-wm=0.4.2=hb711507_0
-  - xkeyboard-config=2.43=hb9d3cd8_0
-  - xorg-libice=1.1.2=hb9d3cd8_0
-  - xorg-libsm=1.2.5=he73a12e_0
-  - xorg-libx11=1.8.11=h4f16b4b_0
-  - xorg-libxau=1.0.12=hb9d3cd8_0
-  - xorg-libxcomposite=0.4.6=hb9d3cd8_2
-  - xorg-libxcursor=1.2.3=hb9d3cd8_0
-  - xorg-libxdamage=1.1.6=hb9d3cd8_0
-  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
-  - xorg-libxext=1.3.6=hb9d3cd8_0
-  - xorg-libxfixes=6.0.1=hb9d3cd8_0
-  - xorg-libxi=1.8.2=hb9d3cd8_0
-  - xorg-libxrandr=1.5.4=hb9d3cd8_0
-  - xorg-libxrender=0.9.12=hb9d3cd8_0
-  - xorg-libxtst=1.2.5=hb9d3cd8_3
-  - xorg-libxxf86vm=1.1.6=hb9d3cd8_0
-  - yaml=0.2.5=h7f98852_2
-  - zeromq=4.3.5=h3b0a872_7
-  - zipp=3.21.0=pyhd8ed1ab_1
-  - zlib-ng=2.2.4=h7955e40_0
-  - zstd=1.5.7=hb8e6e7a_1
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - acoular=25.03
+  - alsa-lib=1.2.13
+  - anyio=4.8.0
+  - aom=3.9.1
+  - argon2-cffi=23.1.0
+  - argon2-cffi-bindings=21.2.0
+  - arrow=1.3.0
+  - asttokens=3.0.0
+  - attr=2.5.1
+  - attrs=25.1.0
+  - beautifulsoup4=4.13.3
+  - bleach=6.2.0
+  - bleach-with-css=6.2.0
+  - blosc=1.21.6
+  - bokeh=3.7.0
+  - brotli=1.1.0
+  - brotli-bin=1.1.0
+  - bzip2=1.0.8
+  - c-ares=1.34.4
+  - c-blosc2=2.17.0
+  - ca-certificates=2025.1.31
+  - cached-property=1.5.2
+  - cached_property=1.5.2
+  - cairo=1.18.2
+  - cffi=1.17.1
+  - comm=0.2.2
+  - contourpy=1.3.1
+  - cycler=0.12.1
+  - cyrus-sasl=2.1.27
+  - dav1d=1.2.1
+  - dbus=1.13.6
+  - debugpy=1.8.13
+  - decorator=5.2.1
+  - defusedxml=0.7.1
+  - double-conversion=3.3.1
+  - exceptiongroup=1.2.2
+  - executing=2.1.0
+  - expat=2.6.4
+  - ffmpeg=7.1.1
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.15.0
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.56.0
+  - fqdn=1.5.1
+  - freeglut=3.2.2
+  - freetype=2.12.1
+  - fribidi=1.0.10
+  - gdk-pixbuf=2.42.12
+  - gettext=0.23.1
+  - gettext-tools=0.23.1
+  - gmp=6.3.0
+  - graphite2=1.3.13
+  - harfbuzz=10.4.0
+  - hdf5=1.14.3
+  - icu=75.1
+  - idna=3.10
+  - imath=3.1.12
+  - importlib-metadata=8.6.1
+  - importlib_resources=6.5.2
+  - ipykernel=6.29.5
+  - ipython=9.0.0
+  - ipython_genutils=0.2.0
+  - ipython_pygments_lexers=1.1.1
+  - isoduration=20.11.0
+  - jack=1.9.22
+  - jasper=4.2.4
+  - jedi=0.19.2
+  - jinja2=3.1.6
+  - joblib=1.4.2
+  - jsonpointer=3.0.0
+  - jsonschema=4.23.0
+  - jsonschema-specifications=2024.10.1
+  - jsonschema-with-format-nongpl=4.23.0
+  - jupyter_client=8.6.3
+  - jupyter_core=5.7.2
+  - jupyter_events=0.12.0
+  - jupyter_server=2.15.0
+  - jupyter_server_terminals=0.5.3
+  - jupyterlab_pygments=0.3.0
+  - keyutils=1.6.1
+  - kiwisolver=1.4.7
+  - krb5=1.21.3
+  - lame=3.100
+  - lcms2=2.17
+  - ld_impl_linux-64=2.43
+  - lerc=4.0.0
+  - level-zero=1.21.2
+  - libabseil=20240722.0
+  - libaec=1.1.3
+  - libasprintf=0.23.1
+  - libasprintf-devel=0.23.1
+  - libass=0.17.3
+  - libavif16=1.2.0
+  - libblas=3.9.0
+  - libbrotlicommon=1.1.0
+  - libbrotlidec=1.1.0
+  - libbrotlienc=1.1.0
+  - libcap=2.75
+  - libcblas=3.9.0
+  - libclang-cpp19.1=19.1.7
+  - libclang13=19.1.7
+  - libcups=2.3.3
+  - libcurl=8.12.1
+  - libdb=6.2.32
+  - libdeflate=1.23
+  - libdrm=2.4.124
+  - libedit=3.1.20250104
+  - libegl=1.7.0
+  - libev=4.33
+  - libexpat=2.6.4
+  - libffi=3.4.6
+  - libflac=1.4.3
+  - libgcc=14.2.0
+  - libgcc-ng=14.2.0
+  - libgcrypt-lib=1.11.0
+  - libgettextpo=0.23.1
+  - libgettextpo-devel=0.23.1
+  - libgfortran=14.2.0
+  - libgfortran5=14.2.0
+  - libgl=1.7.0
+  - libglib=2.82.2
+  - libglu=9.0.3
+  - libglvnd=1.7.0
+  - libglx=1.7.0
+  - libgomp=14.2.0
+  - libgpg-error=1.51
+  - libhwloc=2.11.2
+  - libiconv=1.18
+  - libjpeg-turbo=3.0.0
+  - liblapack=3.9.0
+  - liblapacke=3.9.0
+  - libllvm15=15.0.7
+  - libllvm19=19.1.7
+  - liblzma=5.6.4
+  - libmpdec=4.0.0
+  - libnghttp2=1.64.0
+  - libntlm=1.8
+  - libogg=1.3.5
+  - libopenblas=0.3.29
+  - libopencv=4.11.0
+  - libopengl=1.7.0
+  - libopenvino=2025.0.0
+  - libopenvino-auto-batch-plugin=2025.0.0
+  - libopenvino-auto-plugin=2025.0.0
+  - libopenvino-hetero-plugin=2025.0.0
+  - libopenvino-intel-cpu-plugin=2025.0.0
+  - libopenvino-intel-gpu-plugin=2025.0.0
+  - libopenvino-intel-npu-plugin=2025.0.0
+  - libopenvino-ir-frontend=2025.0.0
+  - libopenvino-onnx-frontend=2025.0.0
+  - libopenvino-paddle-frontend=2025.0.0
+  - libopenvino-pytorch-frontend=2025.0.0
+  - libopenvino-tensorflow-frontend=2025.0.0
+  - libopenvino-tensorflow-lite-frontend=2025.0.0
+  - libopus=1.3.1
+  - libpciaccess=0.18
+  - libpng=1.6.47
+  - libpq=17.4
+  - libprotobuf=5.28.3
+  - librsvg=2.58.4
+  - libsndfile=1.2.2
+  - libsodium=1.0.20
+  - libsqlite=3.49.1
+  - libssh2=1.11.1
+  - libstdcxx=14.2.0
+  - libstdcxx-ng=14.2.0
+  - libsystemd0=257.4
+  - libtiff=4.7.0
+  - libudev1=257.4
+  - libunwind=1.6.2
+  - liburing=2.9
+  - libusb=1.0.27
+  - libuuid=2.38.1
+  - libva=2.22.0
+  - libvorbis=1.3.7
+  - libvpx=1.14.1
+  - libwebp-base=1.5.0
+  - libxcb=1.17.0
+  - libxkbcommon=1.8.0
+  - libxml2=2.13.6
+  - libxslt=1.1.39
+  - libzlib=1.3.1
+  - llvmlite=0.44.0
+  - lz4-c=1.10.0
+  - markupsafe=3.0.2
+  - matplotlib=3.10.1
+  - matplotlib-base=3.10.1
+  - matplotlib-inline=0.1.7
+  - mistune=3.1.2
+  - mpg123=1.32.9
+  - munkres=1.1.4
+  - mysql-common=9.0.1
+  - mysql-libs=9.0.1
+  - narwhals=1.30.0
+  - nbclassic=1.2.0
+  - nbclient=0.10.2
+  - nbconvert-core=7.16.6
+  - nbformat=5.10.4
+  - ncurses=6.5
+  - nest-asyncio=1.6.0
+  - nomkl=1.0
+  - notebook-shim=0.2.4
+  - numba=0.61.0
+  - numexpr=2.10.2
+  - numpy=2.1.3
+  - ocl-icd=2.3.2
+  - opencl-headers=2024.10.24
+  - opencv=4.11.0
+  - openexr=3.3.2
+  - openh264=2.6.0
+  - openjpeg=2.5.3
+  - openldap=2.6.9
+  - openssl=3.4.1
+  - overrides=7.7.0
+  - packaging=24.2
+  - pandas=2.2.3
+  - pandocfilters=1.5.0
+  - pango=1.56.1
+  - parso=0.8.4
+  - pcre2=10.44
+  - pexpect=4.9.0
+  - pickleshare=0.7.5
+  - pillow=11.1.0
+  - pip=25.0.1
+  - pixman=0.44.2
+  - pkgutil-resolve-name=1.3.10
+  - platformdirs=4.3.6
+  - plotly=6.0.0
+  - portaudio=19.7.0
+  - prometheus_client=0.21.1
+  - prompt-toolkit=3.0.50
+  - psutil=7.0.0
+  - pthread-stubs=0.4
+  - ptyprocess=0.7.0
+  - pugixml=1.15
+  - pulseaudio-client=17.0
+  - pure_eval=0.2.3
+  - py-cpuinfo=9.0.0
+  - py-opencv=4.11.0
+  - pycparser=2.22
+  - pygments=2.19.1
+  - pyparsing=3.2.1
+  - pyside6=6.8.2
+  - pytables=3.10.2
+  - python=3.13.2
+  - python-dateutil=2.9.0.post0
+  - python-fastjsonschema=2.21.1
+  - python-json-logger=2.0.7
+  - python-sounddevice=0.5.0
+  - python-tzdata=2025.1
+  - python_abi=3.13
+  - pytz=2024.1
+  - pyyaml=6.0.2
+  - pyzmq=26.2.1
+  - qhull=2020.2
+  - qt6-main=6.8.2
+  - rav1e=0.6.6
+  - readline=8.2
+  - referencing=0.36.2
+  - rfc3339-validator=0.1.4
+  - rfc3986-validator=0.1.1
+  - rpds-py=0.23.1
+  - scikit-learn=1.6.1
+  - scipy=1.15.2
+  - sdl2=2.32.50
+  - sdl3=3.2.8
+  - send2trash=1.8.3
+  - setuptools=75.8.2
+  - six=1.17.0
+  - snappy=1.2.1
+  - sniffio=1.3.1
+  - soupsieve=2.5
+  - spectacoular=25.03
+  - stack_data=0.6.3
+  - svt-av1=3.0.1
+  - tbb=2022.0.0
+  - terminado=0.18.1
+  - threadpoolctl=3.5.0
+  - tinycss2=1.4.0
+  - tk=8.6.13
+  - tornado=6.4.2
+  - traitlets=5.14.3
+  - traits=7.0.2
+  - types-python-dateutil=2.9.0.20241206
+  - typing-extensions=4.12.2
+  - typing_extensions=4.12.2
+  - typing_utils=0.1.0
+  - tzdata=2025a
+  - uri-template=1.3.0
+  - wayland=1.23.1
+  - wayland-protocols=1.41
+  - wcwidth=0.2.13
+  - webcolors=24.11.1
+  - webencodings=0.5.1
+  - websocket-client=1.8.0
+  - x264=1!164.3095
+  - x265=3.5
+  - xcb-util=0.4.1
+  - xcb-util-cursor=0.1.5
+  - xcb-util-image=0.4.0
+  - xcb-util-keysyms=0.4.1
+  - xcb-util-renderutil=0.3.10
+  - xcb-util-wm=0.4.2
+  - xkeyboard-config=2.43
+  - xorg-libice=1.1.2
+  - xorg-libsm=1.2.5
+  - xorg-libx11=1.8.11
+  - xorg-libxau=1.0.12
+  - xorg-libxcomposite=0.4.6
+  - xorg-libxcursor=1.2.3
+  - xorg-libxdamage=1.1.6
+  - xorg-libxdmcp=1.1.5
+  - xorg-libxext=1.3.6
+  - xorg-libxfixes=6.0.1
+  - xorg-libxi=1.8.2
+  - xorg-libxrandr=1.5.4
+  - xorg-libxrender=0.9.12
+  - xorg-libxscrnsaver=1.2.4
+  - xorg-libxtst=1.2.5
+  - xorg-libxxf86vm=1.1.6
+  - xyzservices=2025.1.0
+  - yaml=0.2.5
+  - zeromq=4.3.5
+  - zipp=3.21.0
+  - zlib-ng=2.2.4
+  - zstd=1.5.7
