--- a/env.yml
+++ b/env.yml
@@ -8,6 +8,7 @@ dependencies:
   - acoular=25.03
   - alsa-lib=1.2.13
   - anyio=4.8.0
+  - anywidget=0.9.15
   - aom=3.9.1
   - argon2-cffi=23.1.0
   - argon2-cffi-bindings=21.2.0
@@ -72,6 +73,7 @@ dependencies:
   - ipython=9.0.0
   - ipython_genutils=0.2.0
   - ipython_pygments_lexers=1.1.1
+  - ipywidgets=8.1.5
   - isoduration=20.11.0
   - jack=1.9.22
   - jasper=4.2.4
@@ -88,6 +90,7 @@ dependencies:
   - jupyter_server=2.15.0
   - jupyter_server_terminals=0.5.3
   - jupyterlab_pygments=0.3.0
+  - jupyterlab_widgets=3.0.13
   - keyutils=1.6.1
   - kiwisolver=1.4.7
   - krb5=1.21.3
@@ -241,6 +244,7 @@ dependencies:
   - prometheus_client=0.21.1
   - prompt-toolkit=3.0.50
   - psutil=7.0.0
+  - psygnal=0.12.0
   - pthread-stubs=0.4
   - ptyprocess=0.7.0
   - pugixml=1.15
@@ -304,6 +308,8 @@ dependencies:
   - webcolors=24.11.1
   - webencodings=0.5.1
   - websocket-client=1.8.0
+  - widgetsnbextension=4.0.13
+  - wrapt=1.17.2
   - x264=1!164.3095
   - x265=3.5
   - xcb-util=0.4.1
