--- a/env.yml
+++ b/env.yml
@@ -14,8 +14,10 @@ dependencies:
   - argon2-cffi-bindings=21.2.0
   - arrow=1.3.0
   - asttokens=3.0.0
+  - async-lru=2.0.4
   - attr=2.5.1
   - attrs=25.1.0
+  - babel=2.17.0
   - beautifulsoup4=4.13.3
   - bleach=6.2.0
   - bleach-with-css=6.2.0
@@ -23,6 +25,7 @@ dependencies:
   - bokeh=3.7.0
   - brotli=1.1.0
   - brotli-bin=1.1.0
+  - brotli-python=1.1.0
   - bzip2=1.0.8
   - c-ares=1.34.4
   - c-blosc2=2.17.0
@@ -30,7 +33,9 @@ dependencies:
   - cached-property=1.5.2
   - cached_property=1.5.2
   - cairo=1.18.2
+  - certifi=2025.1.31
   - cffi=1.17.1
+  - charset-normalizer=3.4.1
   - comm=0.2.2
   - contourpy=1.3.1
   - cycler=0.12.1
@@ -62,8 +67,14 @@ dependencies:
   - gettext-tools=0.23.1
   - gmp=6.3.0
   - graphite2=1.3.13
+  - h11=0.14.0
+  - h2=4.2.0
   - harfbuzz=10.4.0
   - hdf5=1.14.3
+  - hpack=4.1.0
+  - httpcore=1.0.7
+  - httpx=0.28.1
+  - hyperframe=6.1.0
   - icu=75.1
   - idna=3.10
   - imath=3.1.12
@@ -73,24 +84,28 @@ dependencies:
   - ipython=9.0.0
   - ipython_genutils=0.2.0
   - ipython_pygments_lexers=1.1.1
-  - ipywidgets=8.1.5
+  - ipywidgets=7.8.5
   - isoduration=20.11.0
   - jack=1.9.22
   - jasper=4.2.4
   - jedi=0.19.2
   - jinja2=3.1.6
   - joblib=1.4.2
+  - json5=0.10.0
   - jsonpointer=3.0.0
   - jsonschema=4.23.0
   - jsonschema-specifications=2024.10.1
   - jsonschema-with-format-nongpl=4.23.0
+  - jupyter-lsp=2.2.5
   - jupyter_client=8.6.3
   - jupyter_core=5.7.2
   - jupyter_events=0.12.0
   - jupyter_server=2.15.0
   - jupyter_server_terminals=0.5.3
+  - jupyterlab=4.3.6
   - jupyterlab_pygments=0.3.0
-  - jupyterlab_widgets=3.0.13
+  - jupyterlab_server=2.27.3
+  - jupyterlab_widgets=1.1.11
   - keyutils=1.6.1
   - kiwisolver=1.4.7
   - krb5=1.21.3
@@ -213,6 +228,7 @@ dependencies:
   - ncurses=6.5
   - nest-asyncio=1.6.0
   - nomkl=1.0
+  - notebook=7.3.3
   - notebook-shim=0.2.4
   - numba=0.61.0
   - numexpr=2.10.2
@@ -256,6 +272,7 @@ dependencies:
   - pygments=2.19.1
   - pyparsing=3.2.1
   - pyside6=6.8.2
+  - pysocks=1.7.1
   - pytables=3.10.2
   - python=3.13.2
   - python-dateutil=2.9.0.post0
@@ -272,6 +289,7 @@ dependencies:
   - rav1e=0.6.6
   - readline=8.2
   - referencing=0.36.2
+  - requests=2.32.3
   - rfc3339-validator=0.1.4
   - rfc3986-validator=0.1.1
   - rpds-py=0.23.1
@@ -293,6 +311,7 @@ dependencies:
   - threadpoolctl=3.5.0
   - tinycss2=1.4.0
   - tk=8.6.13
+  - tomli=2.2.1
   - tornado=6.4.2
   - traitlets=5.14.3
   - traits=7.0.2
@@ -302,13 +321,14 @@ dependencies:
   - typing_utils=0.1.0
   - tzdata=2025a
   - uri-template=1.3.0
+  - urllib3=2.3.0
   - wayland=1.23.1
   - wayland-protocols=1.41
   - wcwidth=0.2.13
   - webcolors=24.11.1
   - webencodings=0.5.1
   - websocket-client=1.8.0
-  - widgetsnbextension=4.0.13
+  - widgetsnbextension=3.6.10
   - wrapt=1.17.2
   - x264=1!164.3095
   - x265=3.5
@@ -340,4 +360,5 @@ dependencies:
   - zeromq=4.3.5
   - zipp=3.21.0
   - zlib-ng=2.2.4
+  - zstandard=0.23.0
   - zstd=1.5.7
