--- a/env.yml
+++ b/env.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - acoular=25.03
+  - acoular=25.03.post1
   - alsa-lib=1.2.13
   - anyio=4.8.0
   - anywidget=0.9.15
