--- a/env_explicit.yml
+++ b/env_explicit.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - acoular=25.03=py_0
+  - acoular=25.03.post1=py_0
   - alsa-lib=1.2.13=hb9d3cd8_0
   - anyio=4.8.0=pyhd8ed1ab_0
   - anywidget=0.9.15=pyhd8ed1ab_0
